del + adapt for skillrepo + new Swaggerclient for sse SkillService
