# swagger.yml
@@ -100,11 +100,32 @@ paths:
             type: string
       responses:
         "200": # status code
-          description: Return an Return all Repos  by owner ID
+          description: Return all Repos by owner ID
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SkillRepositoryListDto'           
+                $ref: '#/components/schemas/SkillRepositoryListDto'
+  /skill-repositories/delete{repositoryId}:
+    delete:
+      operationId: sse_gateway.deleteRepository
+      tags:
+        - SSE Services
+      summary: Delete a Repository by ID
+      description: Return deleted Repo or Error message 
+      parameters:
+        - name: repositoryId
+          in: path
+          description: Repo ID
+          required: true
+          schema:
+            type: string
+      responses:
+        "200": # status code
+          description: Return deleted Repo
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SkillRepositoryDto'                
   /skill-repositories/create:
     post:
       operationId: sse_gateway.createRepository
@@ -125,7 +146,29 @@ paths:
               schema:
                 $ref: '#/components/schemas/SkillRepositoryDto'
       tags:
+        - SSE Services  
+  /skill-repositories/adapt:
+    post:
+      operationId: sse_gateway.adaptRepository
+      summary: ''
+      description: adapts a skill repository.
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SkillRepositoryDto'
+      responses:
+        '201':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SkillRepositoryDto'
+      tags:
         - SSE Services
+
   /user/qualification/create:
     post:
       operationId: sse_gateway.createQualification
